--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.5.6",
+    "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "nodemailer": "^6.9.15",
     "react": "^18",
